--- a/src/containers/Menu/Menu.css
+++ b/src/containers/Menu/Menu.css
@@ -1,5 +1,5 @@
 .menu-bg {
-  background: url("../../assets/cactus1.png");
+  background: url("../../constants/images/cactus1.png");
   background-position: center 14rem;
   background-size: cover;
   background-repeat: no-repeat;
