--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -53,7 +53,8 @@
 .navbar-links li {
   margin: 0 1.5rem;
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  font-weight: 900;
   text-decoration: none;
   transition: 0.5s ease;
 }
